--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch src/main.js"
+    "dev": "node --watch src/main.js",
+    "start": "node src/main.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
